[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/Start.gd" type="Script" id=1]
[ext_resource path="res://Resources/Other/Sprite-0001.png" type="Texture" id=2]
[ext_resource path="res://Tiles/TileSets.tres" type="TileSet" id=3]
[ext_resource path="res://Tiles/WallUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tiles/WallDown.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tiles/WallLeftDown.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tiles/WallRightDown.tscn" type="PackedScene" id=7]

[node name="Start" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite-0001" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65506, 1, 0, 65535, 2, 0, 30, 3, 0, 131071, 2, 0, 65566, 3, 0, 196607, 2, 0, 131102, 3, 0, 262143, 2, 0, 196638, 3, 0, 327679, 2, 0, 262174, 3, 0, 393215, 2, 0, 327710, 3, 0, 458751, 2, 0, 393246, 3, 0, 524287, 2, 0, 458782, 3, 0, 589823, 2, 0, 524318, 3, 0, 655359, 2, 0, 589854, 3, 0, 720895, 2, 0, 655390, 3, 0, 786431, 2, 0, 720926, 3, 0, 851967, 2, 0, 786462, 3, 0, 917503, 2, 0, 851998, 3, 0, 983039, 2, 0, 917534, 3, 0, 1048575, 2, 0, 983070, 3, 0, 1114111, 2, 0, 1048606, 3, 0, 1179647, 2, 0, 1114142, 3, 0 )

[node name="Button_Start" type="Button" parent="."]
margin_left = 64.0
margin_top = 160.0
margin_right = 184.0
margin_bottom = 190.0
text = "Start Game"

[node name="Button_Toggle" type="Button" parent="."]
margin_left = 64.0
margin_top = 200.0
margin_right = 184.0
margin_bottom = 230.0
text = "Toggle Full"

[node name="Button_Exit" type="Button" parent="."]
margin_left = 64.0
margin_top = 240.0
margin_right = 184.0
margin_bottom = 270.0
text = "Quit Game"

[node name="Walls" type="Node2D" parent="."]
editor/display_folded = true

[node name="WallUp" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 16, 0 )

[node name="WallUp2" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 48, 0 )

[node name="WallUp3" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 80, 0 )

[node name="WallUp4" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 112, 0 )

[node name="WallUp5" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 144, 0 )

[node name="WallUp6" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 176, 0 )

[node name="WallUp7" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 208, 0 )

[node name="WallUp8" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 240, 0 )

[node name="WallUp9" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 272, 0 )

[node name="WallUp10" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 304, 0 )

[node name="WallUp11" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 336, 0 )

[node name="WallUp12" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 368, 0 )

[node name="WallUp13" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 400, 0 )

[node name="WallUp14" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 432, 0 )

[node name="WallUp15" parent="Walls" instance=ExtResource( 4 )]
position = Vector2( 464, 0 )

[node name="WallDown" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 16, 304 )

[node name="WallDown2" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 48, 304 )

[node name="WallDown3" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 80, 304 )

[node name="WallDown4" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 112, 304 )

[node name="WallDown5" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 144, 304 )

[node name="WallDown6" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 176, 304 )

[node name="WallDown7" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 208, 304 )

[node name="WallDown8" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 240, 304 )

[node name="WallDown9" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 272, 304 )

[node name="WallDown10" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 304, 304 )

[node name="WallDown11" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 336, 304 )

[node name="WallDown12" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 368, 304 )

[node name="WallDown13" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 400, 304 )

[node name="WallDown14" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 432, 304 )

[node name="WallDown15" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 464, 304 )

[node name="WallLeftDown" parent="Walls" instance=ExtResource( 6 )]
position = Vector2( -8, 304 )

[node name="WallRightDown" parent="Walls" instance=ExtResource( 7 )]
position = Vector2( 488, 304 )
[connection signal="pressed" from="Button_Start" to="." method="_on_Button_Start_pressed"]
[connection signal="pressed" from="Button_Toggle" to="." method="_on_Button_Toggle_pressed"]
[connection signal="pressed" from="Button_Exit" to="." method="_on_Button_Exit_pressed"]
